bad/bin_op_ne_class_string.example_compiler_output
ERROR
[1mbad/bin_op_ne_class_string.lat:5:8: [1;31merror: [0;1moperator != cannot compare values of types `Y` and `string` because values are not convertible to either of the two types[m
	new Y != "";
	      [1;32m^[m
